# vla-game-agent

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  report.md
.claude/: settings.json
.claude/agents/: implementer.md  reviewer.md  test-writer.md
agents/: architecture-decisions.md  experiment-log.md  roadmap.md
docs/: agentic-pipeline.md
scripts/: collect_trajectories.py  demo_policy.py  evaluate_policy.py  inspect_trajectories.py  plot_results.py  random_rollout.py  run_pipeline.py  run_pipeline.sh  train_imitation.py
specs/: agentic-pipeline.md  gemini-provider-spec.md  hello-crafter-spec.md  initial-spec.md  mvp-0b-spec.md  mvp-1-spec.md  mvp-2-spec.md  mvp-2.1-spec.md  mvp-2.2-spec.md  mvp-2.3-spec.md  mvp-3-spec.md  pipeline-e2e-testing-plan.md  pipeline-provider-generalization-spec.md  pipeline-training-stages-spec.md  smoke-test-spec.md  vla-components-research-spec.md  vla-quality-improvements-spec.md
src/vla_agent/: __init__.py  data.py  models.py  policies.py
src/vla_agent/envs/: crafter_env.py
src/vla_agent/pipeline/: README.md  __init__.py  core.py
src/vla_agent/pipeline/prompts/: implementer.md  reviewer.md  test_writer.md
src/vla_agent/pipeline/providers/: __init__.py  base.py  claude.py  codex.py  gemini.py  opencode.py
src/vla_agent/utils/: seed.py
tests/: conftest.py  test_crafter_env.py  test_data_collection.py  test_data_model.py  test_pipeline_core.py  test_pipeline_providers.py  test_pipeline_stages.py  test_policies.py  test_random_rollout.py  test_seed.py  test_training_eval.py  test_vla_models.py
(+1 files in other folders)
