[project]
name = "vla-game-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "crafter>=1.8",
    "torch>=2.0",
    "gymnasium>=0.29",
    "numpy>=1.24",
    "imageio[ffmpeg,pyav]>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests that require the Crafter environment",
]

[tool.ruff]
line-length = 100

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vla_agent"]
